correcciones despues de solucion del problema de filtros

--- a/src/main/webapp/css/gestordetareas.css
+++ b/src/main/webapp/css/gestordetareas.css
@@ -154,7 +154,7 @@ body * {
 }
 .inicio1{
     position: relative;
-    left: 8%;
+    left: 6px;
     background: #FFFFFF;
     color: #3e4347;
     text-align: center;
